--- a/calculator.html
+++ b/calculator.html
@@ -1,100 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Calculators</title>
     <style>
-        body{
-            background-color: 	#D3D3D3;
-        }
-        .container {
-    max-width: 400px;
-    margin: 10vh auto 0 auto;
-    /* box-shadow: 0px 0px 43px 17px rgba(153,153,153,1); */
-    box-shadow: 7px 7px 26px -5px rgba(0,0,0,0.6);
-}
 
-#display {
-    text-align: right;
-    height: 70px;
-    line-height: 70px;
-    padding: 16px 8px;
-    font-size: 25px;
-    border: 2px solid rgb(23, 19, 27);
-}
+      .container {
+        max-width: 400px;
+        margin: 10vh auto 0 auto;
+        box-shadow: 7px 7px 26px -5px rgba(0, 0, 0, 0.6);
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+      }
 
-.buttons {
-    display: grid;
-    border-bottom: 1px solid rgb(5, 4, 4);
-    border-left: 1px solid rgb(15, 12, 12);
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-}
+      #display {
+        text-align: right;
+        height: 70px;
+        line-height: 70px;
+        padding: 16px 8px;
+        font-size: 25px;
+        border: 2px solid rgb(23, 19, 27);
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+      }
 
-.buttons > div {
-    border-top: 1px solid rgb(0, 0, 0);
-    border-right: 1px solid rgb(8, 7, 7);
-}
+      .buttons {
+        display: grid;
+        border-bottom: 1px solid rgb(5, 4, 4);
+        border-left: 1px solid rgb(15, 12, 12);
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+      }
 
-.button {
-    border: 1px solid rgb(15, 11, 11);
-    line-height: 100px;
-    text-align: center;
-    font-size: 25px;
-    cursor: pointer;
-}
+      .buttons > div {
+        border-top: 1px solid rgb(0, 0, 0);
+        border-right: 1px solid rgb(8, 7, 7);
+      }
 
-#equal {
-    background-color: rgb(85, 85, 255);
-    color: white;
-}
+      .button {
+        border: 1px solid rgb(15, 11, 11);
+        line-height: 100px;
+        text-align: center;
+        font-size: 25px;
+        cursor: pointer;
+      }
 
-.button:hover {
-    background-color: #696b63;
-    color: white;
-    transition: 0.5s ease-in-out;
-}
+      #equal {
+        background-color: rgb(85, 85, 255);
+        color: white;
+      }
 
-header h1{
-    font-family: sans-serif;
-    text-align: center;
-    font-size: 45px;
-}
+      .button:hover {
+        background-color: #696b63;
+        color: white;
+        transition: 0.5s ease-in-out;
+      }
+
+      header h1 {
+        font-family: sans-serif;
+        text-align: center;
+        font-size: 45px;
+      }
+
+      #clear {
+        background-color: rgb(247, 226, 108);
+      }
+
+      #backspace {
+        background-color: rgb(133, 196, 149);
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Calculator</h1>
+      <h1>Calculator</h1>
     </header>
     <section>
-        <div class="container">
-            <div id="display"></div>
-            <div class="buttons">
-                <div class="button">C</div>
-                <div class="button">/</div>
-                <div class="button">*</div>
-                <div class="button">&larr;</div>
-                <div class="button">7</div>
-                <div class="button">8</div>
-                <div class="button">9</div>
-                <div class="button">-</div>
-                <div class="button">4</div>
-                <div class="button">5</div>
-                <div class="button">6</div>
-                <div class="button">+</div>
-                <div class="button">1</div>
-                <div class="button">2</div>
-                <div class="button">3</div>
-                <div class="button">.</div>
-                <div class="button">(</div>
-                <div class="button">0</div>
-                <div class="button">)</div>
-                <div id="equal" class="button">=</div>
-            </div>
+      <div class="container">
+        <div id="display"></div>
+        <div class="buttons">
+          <div class="button" id="clear">C</div>
+          <div class="button">/</div>
+          <div class="button">*</div>
+          <div class="button" id="backspace">&larr;</div>
+          <div class="button">7</div>
+          <div class="button">8</div>
+          <div class="button">9</div>
+          <div class="button">-</div>
+          <div class="button">4</div>
+          <div class="button">5</div>
+          <div class="button">6</div>
+          <div class="button">+</div>
+          <div class="button">1</div>
+          <div class="button">2</div>
+          <div class="button">3</div>
+          <div class="button">.</div>
+          <div class="button">(</div>
+          <div class="button">0</div>
+          <div class="button">)</div>
+          <div id="equal" class="button">=</div>
         </div>
+      </div>
     </section>
 
     <script src="calc.js"></script>
-</body>
+  </body>
 </html>
